force-app/main/default/objects/Service_Ticket__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual user (technician or specialist) assigned to this Service Ticket. Use alongside Assigned_Crew__c for crew-level assignment. For Aqua, this is the Aqua technician. For Customer Care, this is the assigned rep.</description>
    <label>Assigned Tech / User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Service Tickets</relationshipLabel>
    <relationshipName>Assigned_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>