force-app/main/default/objects/Service_Ticket__c/fields/Billing_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Source__c</fullName>
    <description>Where the billing treatment originated. Set to Community Package at auto-creation; Manual Override when changed by a user.</description>
    <label>Billing Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Builder PO</fullName>
            </value>
            <value>
                <fullName>Community Package</fullName>
                <default>true</default>
                <label>Community Package</label>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>