force-app/main/default/objects/Service_Ticket__c/fields/Billing_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Billing_Treatment__c</fullName>
    <description>How this service ticket will be billed. Derived from Community Package at creation; can be overridden manually.</description>
    <label>Billing Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Included in PO</fullName>
                <default>true</default>
                <label>Included in PO</label>
            </value>
            <value>
                <fullName>Billable Separately</fullName>
            </value>
            <value>
                <fullName>No Charge</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>