force-app/main/default/objects/Service_Ticket__c/fields/Builder_PO__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder PO</label>
    <referenceTo>Builder_PO__c</referenceTo>
    <relationshipLabel>Service Tickets (Builder PO)</relationshipLabel>
    <relationshipName>Builder_PO_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>