force-app/main/default/objects/Service_Ticket__c/fields/Checklist_Complete__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checklist Complete</label>
    <type>Checkbox</type>
</CustomField>