force-app/main/default/objects/Service_Ticket__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Service Tickets (Community)</relationshipLabel>
    <relationshipName>Community_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>