force-app/main/default/objects/Service_Ticket__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Service Tickets (Package)</relationshipLabel>
    <relationshipName>Community_Package_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>