force-app/main/default/objects/Service_Ticket__c/fields/Completed_For_Billing__c.field-meta.xml
<CustomField>
    <fullName>Completed_For_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing confirmation gate. Set to true by CS or FM when the Service Ticket is ready to be included on an invoice. Required before invoice generation includes this ticket. Does not mean the ticket is operationally complete — check Status__c for operational status.</description>
    <label>Completed for Billing</label>
    <type>Checkbox</type>
</CustomField>