force-app/main/default/objects/Service_Ticket__c/fields/Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Amount__c</fullName>
    <description>Internal cost for this Service Ticket. Used for GP% calculation at the service-ticket level. Populated from WOLI unit costs or manual entry for warranty/internal work.</description>
    <label>Cost Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>