force-app/main/default/objects/Service_Ticket__c/fields/Included_In_PO__c.field-meta.xml
<CustomField>
    <fullName>Included_In_PO__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if this Service Ticket&apos;s cost/revenue is covered by the Builder PO and should roll into the standard invoice. False if it requires a separate EPO or is non-billable. Drives invoice line item generation.</description>
    <label>Included in PO</label>
    <type>Checkbox</type>
</CustomField>