force-app/main/default/objects/Service_Ticket__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice this Service Ticket was billed on. Populated by invoice creation automation after Closeout Approved. Null if non-billable (Billing_Treatment__c = Warranty / No Charge or Internal Cost).</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Ticket_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>