force-app/main/default/objects/Service_Ticket__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific Invoice Line Item this Service Ticket maps to. Populated when invoice is generated and line items are assigned to service tickets. Enables billing reconciliation per service type.</description>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Ticket_Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>