force-app/main/default/objects/Service_Ticket__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Service Tickets (Lot)</relationshipLabel>
    <relationshipName>Lot_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>