force-app/main/default/objects/Service_Ticket__c/fields/Requires_EPO__c.field-meta.xml
<CustomField>
    <fullName>Requires_EPO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this Service Ticket requires an Extra Purchase Order approval before work can be billed. Triggers EPO workflow when set to true. Automatically sets Included_In_PO__c = false.</description>
    <label>Requires EPO</label>
    <type>Checkbox</type>
</CustomField>