force-app/main/default/objects/Service_Ticket__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <description>Billable revenue amount for this Service Ticket. Populated from the associated WOLI unit prices or EPO amount. Used for invoice line item generation and gross profit analysis.</description>
    <label>Revenue Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>