force-app/main/default/objects/Service_Ticket__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aqua</fullName>
                <default>true</default>
                <label>Aqua</label>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Final Grading</fullName>
            </value>
            <value>
                <fullName>Site Readiness</fullName>
            </value>
            <value>
                <fullName>Warranty Inspection</fullName>
            </value>
            <value>
                <fullName>Customer Care Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>