force-app/main/default/objects/Service_Ticket__c/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Service Tickets (Takeoff)</relationshipLabel>
    <relationshipName>Takeoff_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>